deps/v8/test/message/fail/import-as-eval.out
# Copyright 2015 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:7: SyntaxError: Unexpected eval or arguments in strict mode
import { foo as eval } from "mod";
                ^^^^
SyntaxError: Unexpected eval or arguments in strict mode
